#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psana_examples
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-07
2013-03-22 Andy Salnikov
- add new module DumpOceanOptics

Tag: V00-03-06
2013-03-22 Andy Salnikov
- in DumpUsdUsb print status info 

Tag: V00-03-05
2013-03-21 Andy Salnikov
- fix default source string in DumpUsdUsb module

Tag: V00-03-04
2013-02-26 Andy Salnikov
- update SumpScPad for a small change in Convig classes interfaces

Tag: V00-03-03
2013-02-05 Andy Salnikov
- added few more modules for new classes and update existing modules

Tag: V00-03-02
2013-02-04 Andy Salnikov
- Ipimb::Config::diodeGain() method was renamed to capacitorValue, fixing
  the code which used it

Tag: V00-03-01
2013-01-30 Andy Salnikov
- removed unnecessary .get() on smart pointers

Tag: V00-03-00
2013-01-30 Andy Salnikov
- switching to const ndarrays for array data
- ndarray has operator<<(ostream) now, use it do dump array data

Tag: V00-02-16
2012-11-28 Andy Salnikov
- change in Source constructor

Tag: V00-02-15
2012-11-15 Andy Salnikov
- add BldDataGMDV0 and BldDataGMDV1 to DumpBld module

Tag: V00-02-14
2012-11-08 Andy Salnikov
- dump hex damage mask for bld ebeam classes
- add princeton::ConfigV4 class

Tag: V00-02-13
2012-09-28 Andy Salnikov
- DumpControl.cpp: fix for the code which prints labes

Tag: V00-02-12
2012-09-28 Andy Salnikov
- update examples with new classes from pdsdata V04-01-00

Tag: V00-02-11
2012-07-06 Andy Salnikov
- add new module DumpQuartz
- change DumpPnccd to dump FullFrameV1 class

Tag: V00-02-10
2012-06-22 Andy Salnikov
- EvrData.EventCodeV5: one member method was incorrectly named

Tag: V00-02-09
2012-06-07 Andy Salnikov